--- a/ChatAppBackend/appsettings.json
+++ b/ChatAppBackend/appsettings.json
@@ -2,16 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication.JwtBearer": "Debug"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "AddConnectionString"
+    "DefaultConnection": "workstation id=chatappDatabase.mssql.somee.com;packet size=4096;user id=aabdullah1_SQLLogin_1;pwd=ebmwxradkk;data source=chatappDatabase.mssql.somee.com;persist security info=False;initial catalog=chatappDatabase;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "AddKey",
-    "Issuer": "AddIsuuer",
+    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZuctucty3",
+    "Issuer": "https://localhost:7139",
     "Audience": "AddAudience"
   },
   "EmailSettings": {
