--- a/ChatAppBackend/appsettings.json
+++ b/ChatAppBackend/appsettings.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=chatappDatabase.mssql.somee.com;packet size=4096;user id=aabdullah1_SQLLogin_1;pwd=ebmwxradkk;data source=chatappDatabase.mssql.somee.com;persist security info=False;initial catalog=chatappDatabase;TrustServerCertificate=True"
+    "DefaultConnection": "AddConnectionString"
   },
   "Jwt": {
-    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZuctucty3",
-    "Issuer": "https://localhost:7139",
+    "Key": "AddKey",
+    "Issuer": "AddIsuuer",
     "Audience": "AddAudience"
   },
   "EmailSettings": {
