--- a/ChatAppBackend/appsettings.json
+++ b/ChatAppBackend/appsettings.json
@@ -16,7 +16,7 @@
     "Audience": "AddAudience"
   },
   "EmailSettings": {
-    "Host": "smtp.gmail.com",
+    "Host": "AddHost",
     "Port": 587,
     "Username": "AddUserName",
     "Password": "AddPassword",
